--- a/DiscriminatedUnion.Generator/DiscriminatedUnion.Generator.csproj
+++ b/DiscriminatedUnion.Generator/DiscriminatedUnion.Generator.csproj
@@ -6,6 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<LangVersion>Latest</LangVersion>
+		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
 	</PropertyGroup>
 
 	<ItemGroup>
