--- a/DiscriminatedUnion.Generator/DiscriminatedUnion.Generator.csproj
+++ b/DiscriminatedUnion.Generator/DiscriminatedUnion.Generator.csproj
@@ -12,10 +12,16 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" PrivateAssets="all" />
-		<PackageReference Include="PolySharp" Version="1.14.1" />
+        <PackageReference Include="PolySharp" Version="1.14.1" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+        <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+        <None Include="$(OutputPath)\DiscriminatedUnion.Generator.Shared.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+        <None Include="$(OutputPath)\DiscriminatedUnion.Generator.Shared.dll" Pack="true" PackagePath="lib\netstandard2.0" Visible="false" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\DiscriminatedUnion.Generator.Shared\DiscriminatedUnion.Generator.Shared.csproj" />
 	</ItemGroup>
 </Project>
