--- a/SharpUnion/SharpUnion.csproj
+++ b/SharpUnion/SharpUnion.csproj
@@ -23,6 +23,11 @@
     </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Antlr4" Version="4.6.6">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+        <PackageReference Include="Antlr4.Runtime" Version="4.6.6" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" PrivateAssets="all" />
         <PackageReference Include="PolySharp" Version="1.14.1" />
